tests/NormalTests/paczka1/fuzzy1/81763631.err
Error in line 2: qp7t7Ks S325 54,1
Error in line 3: qp7t7Ks S194 53,1
Error in line 8: p2ju S120 21,4
Error in line 14: QMLXt8rj S120 88,9
Error in line 1: cRCgZfrhzz S325 56,7
Error in line 23: qp7t7Ks S325 16,2
Error in line 11: 94nWpqT S325 30,5
Error in line 28: QMLXt8rj A465 35,5
Error in line 25: p2ju A465 6,2
Error in line 31: QMLXt8rj S194 21,1
Error in line 26: qp7t7Ks S194 13,1
Error in line 32: p2ju S325 95,8
